--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -748,3 +748,149 @@ pre tt:after {
     font-size: 100%;
   }
 }
+
+.textLeft {
+  text-align: 'left';
+}
+.textRight {
+  text-align: 'right';
+}
+.textCenter {
+  text-align: 'center';
+}
+
+// transition components
+@keyframes fadeout {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+}
+
+@keyframes fadein {
+  0% {
+    opacity: 0;
+    transform: scale(0.7);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.toggleOut {
+  animation: fadeout 350ms;
+  opacity: 0;
+}
+
+.toggleIn {
+  animation: fadein 350ms;
+  opacity: 1;
+}
+
+//shadow
+.shadow {
+  -webkit-box-shadow:0px 1px 1px darkgray;
+  -moz-box-shadow:0px 1px 1px darkgray;
+  box-shadow:0px 1px 1px darkgray;
+}
+
+// border
+@keyframes bg {
+  0% {
+      background-size:    0 3px,
+                          3px 0,
+                          0 3px,
+                          3px 0;
+  }
+  25% {
+      background-size:    100% 3px,
+                          3px 0,
+                          0 3px,
+                          3px 0;
+  }
+  50% {
+      background-size:    100% 3px,
+                          3px 100%,
+                          0 3px,
+                          3px 0;
+  }
+  75% {
+      background-size:    100% 3px,
+                          3px 100%,
+                          100% 3px,
+                          3px 0;
+  }
+  100% {
+      background-size:    100% 3px,
+                          3px 100%,
+                          100% 3px,
+                          3px 100%;
+  }
+}
+
+.hoverBorder {
+  background-repeat: no-repeat;
+  background-image:   linear-gradient(to right, #C9C9C9 100%, #C9C9C9 100%),
+                      linear-gradient(to bottom, #C9C9C9 100%, #C9C9C9 100%),
+                      linear-gradient(to right, #C9C9C9 100%, #C9C9C9 100%),
+                      linear-gradient(to bottom, #C9C9C9 100%, #C9C9C9 100%);
+  background-size:    100% 2px,
+                      2px 100%,
+                      100% 2px,
+                      2px 100%;
+  background-position:    0 0,
+                          100% 0,
+                          100% 100%,
+                          0 100%;
+  animation: bg 1s cubic-bezier(0.8, 1, 0.8, 1) 1 running;
+}
+
+// Think outside the box
+.box {
+  margin: 0 auto;
+  padding: 1px;
+  background-color: gray; /* gold */
+  /*  Single pixel data uri image http://jsfiddle.net/LPxrT/  */
+  background-image: 
+    url('data:image/gif;base64,R0lGODlhAQABAPAAAAAAAP///yH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=='),  
+    url('data:image/gif;base64,R0lGODlhAQABAPAAAAAAAP///yH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=='),
+    url('data:image/gif;base64,R0lGODlhAQABAPAAAP///////yH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==');
+  background-repeat: no-repeat;
+  background-size: 0 2px, 0 100%, 0% 2px;
+  background-position: top center, bottom center;
+  animation: drawBorderFromCenter 1.1s ease-out forwards paused;
+}
+
+.box:hover {
+  animation: drawBorderFromCenter 1.1s ease-out forwards running;
+}
+
+.boxContent {
+  background: white;
+  padding-bottom: 3em;
+  text-align: center;
+}
+
+/* Chrome, Safari, Opera */
+@keyframes drawBorderFromCenter {
+    0% {
+      background-size: 100% 1px, 100% 99%, 0 0px;
+    }
+    20% {
+      background-size: 100% 1px, 100% 99%, 100% 100%;
+    }
+    66%
+    {
+      background-size: 100% 1px, 100% 0, 100% 100%;
+    }
+    100%
+    {
+      background-size: 0 0px, 0 0, 100% 100%;
+
+    }
+}
